--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-notification-alert": "^0.0.13",
     "react-redux": "^8.0.5",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "react-toastify": "^10.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^3.3.0"
